# WikiMap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  usage.py
wikimap/: __init__.py  analyzer.py  dump_downloader.py  graph.py  main.py  parser.py  sanity.py
wikimap/constants/: graph_format.py  language.py  sanity_check_mode.py
